# CPTS122-Game

./: CMakeLists.txt  CPTS122_FINAL_PROJECT_DYLAN_TARLYN.sln
CPTS122_FINAL_PROJECT_DYLAN_TARLYN/: Bullet.cpp  Bullet.h  CMakeLists.txt  CPTS122_FINAL_PROJECT_DYLAN_TARLYN.vcxproj  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Player.cpp  Player.h  main.cpp
CPTS122_FINAL_PROJECT_DYLAN_TARLYN/Debug/: CPTS122_FINAL_PROJECT_DYLAN_TARLYN.exe.recipe  vc142.idb
CPTS122_FINAL_PROJECT_DYLAN_TARLYN/Debug/CPTS122_.7f47e691.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CPTS122_FINAL_PROJECT_DYLAN_TARLYN.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/: CPTS122_FINAL_PROJECT_DYLAN_TARLYN.ilk
