cmake_minimum_required(VERSION 3.17)
project(CPTS122_Game4)

set(CMAKE_CXX_STANDARD 14)

include_directories(CPTS122_FINAL_PROJECT_DYLAN_TARLYN)
include_directories(External/include)
include_directories(External/include/SFML)
include_directories(External/include/SFML/Audio)
include_directories(External/include/SFML/Graphics)
include_directories(External/include/SFML/Network)
include_directories(External/include/SFML/System)
include_directories(External/include/SFML/Window)

add_executable(CPTS122_Game4
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/Fonts/RetroGaming.ttf
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/Textures/asteroid.png
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/Textures/background.jpg
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/Textures/bullet.png
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/Textures/ship.png
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/Bullet.cpp
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/Bullet.h
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/Enemy.cpp
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/Enemy.h
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/Game.cpp
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/Game.h
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/main.cpp
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/openal32.dll
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/Player.cpp
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/Player.h
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/sfml-audio-2.dll
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/sfml-audio-d-2.dll
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/sfml-graphics-2.dll
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/sfml-graphics-d-2.dll
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/sfml-network-2.dll
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/sfml-network-d-2.dll
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/sfml-system-2.dll
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/sfml-system-d-2.dll
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/sfml-window-2.dll
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/sfml-window-d-2.dll
        External/include/SFML/Audio/AlResource.hpp
        External/include/SFML/Audio/Export.hpp
        External/include/SFML/Audio/InputSoundFile.hpp
        External/include/SFML/Audio/Listener.hpp
        External/include/SFML/Audio/Music.hpp
        External/include/SFML/Audio/OutputSoundFile.hpp
        External/include/SFML/Audio/Sound.hpp
        External/include/SFML/Audio/SoundBuffer.hpp
        External/include/SFML/Audio/SoundBufferRecorder.hpp
        External/include/SFML/Audio/SoundFileFactory.hpp
        External/include/SFML/Audio/SoundFileFactory.inl
        External/include/SFML/Audio/SoundFileReader.hpp
        External/include/SFML/Audio/SoundFileWriter.hpp
        External/include/SFML/Audio/SoundRecorder.hpp
        External/include/SFML/Audio/SoundSource.hpp
        External/include/SFML/Audio/SoundStream.hpp
        External/include/SFML/Graphics/BlendMode.hpp
        External/include/SFML/Graphics/CircleShape.hpp
        External/include/SFML/Graphics/Color.hpp
        External/include/SFML/Graphics/ConvexShape.hpp
        External/include/SFML/Graphics/Drawable.hpp
        External/include/SFML/Graphics/Export.hpp
        External/include/SFML/Graphics/Font.hpp
        External/include/SFML/Graphics/Glsl.hpp
        External/include/SFML/Graphics/Glsl.inl
        External/include/SFML/Graphics/Glyph.hpp
        External/include/SFML/Graphics/Image.hpp
        External/include/SFML/Graphics/PrimitiveType.hpp
        External/include/SFML/Graphics/Rect.hpp
        External/include/SFML/Graphics/Rect.inl
        External/include/SFML/Graphics/RectangleShape.hpp
        External/include/SFML/Graphics/RenderStates.hpp
        External/include/SFML/Graphics/RenderTarget.hpp
        External/include/SFML/Graphics/RenderTexture.hpp
        External/include/SFML/Graphics/RenderWindow.hpp
        External/include/SFML/Graphics/Shader.hpp
        External/include/SFML/Graphics/Shape.hpp
        External/include/SFML/Graphics/Sprite.hpp
        External/include/SFML/Graphics/Text.hpp
        External/include/SFML/Graphics/Texture.hpp
        External/include/SFML/Graphics/Transform.hpp
        External/include/SFML/Graphics/Transformable.hpp
        External/include/SFML/Graphics/Vertex.hpp
        External/include/SFML/Graphics/VertexArray.hpp
        External/include/SFML/Graphics/VertexBuffer.hpp
        External/include/SFML/Graphics/View.hpp
        External/include/SFML/Network/Export.hpp
        External/include/SFML/Network/Ftp.hpp
        External/include/SFML/Network/Http.hpp
        External/include/SFML/Network/IpAddress.hpp
        External/include/SFML/Network/Packet.hpp
        External/include/SFML/Network/Socket.hpp
        External/include/SFML/Network/SocketHandle.hpp
        External/include/SFML/Network/SocketSelector.hpp
        External/include/SFML/Network/TcpListener.hpp
        External/include/SFML/Network/TcpSocket.hpp
        External/include/SFML/Network/UdpSocket.hpp
        External/include/SFML/System/Clock.hpp
        External/include/SFML/System/Err.hpp
        External/include/SFML/System/Export.hpp
        External/include/SFML/System/FileInputStream.hpp
        External/include/SFML/System/InputStream.hpp
        External/include/SFML/System/Lock.hpp
        External/include/SFML/System/MemoryInputStream.hpp
        External/include/SFML/System/Mutex.hpp
        External/include/SFML/System/NativeActivity.hpp
        External/include/SFML/System/NonCopyable.hpp
        External/include/SFML/System/Sleep.hpp
        External/include/SFML/System/String.hpp
        External/include/SFML/System/String.inl
        External/include/SFML/System/Thread.hpp
        External/include/SFML/System/Thread.inl
        External/include/SFML/System/ThreadLocal.hpp
        External/include/SFML/System/ThreadLocalPtr.hpp
        External/include/SFML/System/ThreadLocalPtr.inl
        External/include/SFML/System/Time.hpp
        External/include/SFML/System/Utf.hpp
        External/include/SFML/System/Utf.inl
        External/include/SFML/System/Vector2.hpp
        External/include/SFML/System/Vector2.inl
        External/include/SFML/System/Vector3.hpp
        External/include/SFML/System/Vector3.inl
        External/include/SFML/Window/Clipboard.hpp
        External/include/SFML/Window/Context.hpp
        External/include/SFML/Window/ContextSettings.hpp
        External/include/SFML/Window/Cursor.hpp
        External/include/SFML/Window/Event.hpp
        External/include/SFML/Window/Export.hpp
        External/include/SFML/Window/GlResource.hpp
        External/include/SFML/Window/Joystick.hpp
        External/include/SFML/Window/Keyboard.hpp
        External/include/SFML/Window/Mouse.hpp
        External/include/SFML/Window/Sensor.hpp
        External/include/SFML/Window/Touch.hpp
        External/include/SFML/Window/VideoMode.hpp
        External/include/SFML/Window/Window.hpp
        External/include/SFML/Window/WindowHandle.hpp
        External/include/SFML/Window/WindowStyle.hpp
        External/include/SFML/Audio.hpp
        External/include/SFML/Config.hpp
        External/include/SFML/GpuPreference.hpp
        External/include/SFML/Graphics.hpp
        External/include/SFML/Main.hpp
        External/include/SFML/Network.hpp
        External/include/SFML/OpenGL.hpp
        External/include/SFML/System.hpp
        External/include/SFML/Window.hpp
        External/lib/cmake/SFML/SFMLConfig.cmake
        External/lib/cmake/SFML/SFMLConfigDependencies.cmake
        External/lib/cmake/SFML/SFMLConfigVersion.cmake
        External/lib/cmake/SFML/SFMLSharedTargets-debug.cmake
        External/lib/cmake/SFML/SFMLSharedTargets-release.cmake
        External/lib/cmake/SFML/SFMLSharedTargets.cmake
        External/lib/cmake/SFML/SFMLStaticTargets-debug.cmake
        External/lib/cmake/SFML/SFMLStaticTargets-release.cmake
        External/lib/cmake/SFML/SFMLStaticTargets.cmake
        External/lib/flac.lib
        External/lib/freetype.lib
        External/lib/ogg.lib
        External/lib/openal32.lib
        External/lib/sfml-audio-d.lib
        External/lib/sfml-audio-d.pdb
        External/lib/sfml-audio-s-d.lib
        External/lib/sfml-audio-s-d.pdb
        External/lib/sfml-audio-s.lib
        External/lib/sfml-audio.lib
        External/lib/sfml-graphics-d.lib
        External/lib/sfml-graphics-d.pdb
        External/lib/sfml-graphics-s-d.lib
        External/lib/sfml-graphics-s-d.pdb
        External/lib/sfml-graphics-s.lib
        External/lib/sfml-graphics.lib
        External/lib/sfml-main-d.lib
        External/lib/sfml-main-s-d.pdb
        External/lib/sfml-main.lib
        External/lib/sfml-network-d.lib
        External/lib/sfml-network-d.pdb
        External/lib/sfml-network-s-d.lib
        External/lib/sfml-network-s-d.pdb
        External/lib/sfml-network-s.lib
        External/lib/sfml-network.lib
        External/lib/sfml-system-d.lib
        External/lib/sfml-system-d.pdb
        External/lib/sfml-system-s-d.lib
        External/lib/sfml-system-s-d.pdb
        External/lib/sfml-system-s.lib
        External/lib/sfml-system.lib
        External/lib/sfml-window-d.lib
        External/lib/sfml-window-d.pdb
        External/lib/sfml-window-s-d.lib
        External/lib/sfml-window-s-d.pdb
        External/lib/sfml-window-s.lib
        External/lib/sfml-window.lib
        External/lib/vorbis.lib
        External/lib/vorbisenc.lib
        External/lib/vorbisfile.lib
        External/openal32.dll
        External/sfml-audio-2.dll
        External/sfml-audio-d-2.dll
        External/sfml-graphics-2.dll
        External/sfml-graphics-d-2.dll
        External/sfml-network-2.dll
        External/sfml-network-d-2.dll
        External/sfml-system-2.dll
        External/sfml-system-d-2.dll
        External/sfml-window-2.dll
        External/sfml-window-d-2.dll)
