cmake_minimum_required(VERSION 3.17)
project(CPTS122_Game)

set(CMAKE_CXX_STANDARD 14)

include_directories(CPTS122_FINAL_PROJECT_DYLAN_TARLYN)
include_directories(External)
include_directories(External/include)
include_directories(External/include/SFML)
include_directories(External/include/SFML/Audio)
include_directories(External/include/SFML/Graphics)
include_directories(External/include/SFML/Network)
include_directories(External/include/SFML/System)
include_directories(External/include/SFML/Window)

add_executable(CPTS122_Game
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/Bullet.cpp
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/Bullet.h
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/Enemy.cpp
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/Enemy.h
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/Game.cpp
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/Game.h
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/main.cpp
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/Player.cpp
        CPTS122_FINAL_PROJECT_DYLAN_TARLYN/Player.h
        External/include/SFML/Audio/AlResource.hpp
        External/include/SFML/Audio/Export.hpp
        External/include/SFML/Audio/InputSoundFile.hpp
        External/include/SFML/Audio/Listener.hpp
        External/include/SFML/Audio/Music.hpp
        External/include/SFML/Audio/OutputSoundFile.hpp
        External/include/SFML/Audio/Sound.hpp
        External/include/SFML/Audio/SoundBuffer.hpp
        External/include/SFML/Audio/SoundBufferRecorder.hpp
        External/include/SFML/Audio/SoundFileFactory.hpp
        External/include/SFML/Audio/SoundFileFactory.inl
        External/include/SFML/Audio/SoundFileReader.hpp
        External/include/SFML/Audio/SoundFileWriter.hpp
        External/include/SFML/Audio/SoundRecorder.hpp
        External/include/SFML/Audio/SoundSource.hpp
        External/include/SFML/Audio/SoundStream.hpp
        External/include/SFML/Graphics/BlendMode.hpp
        External/include/SFML/Graphics/CircleShape.hpp
        External/include/SFML/Graphics/Color.hpp
        External/include/SFML/Graphics/ConvexShape.hpp
        External/include/SFML/Graphics/Drawable.hpp
        External/include/SFML/Graphics/Export.hpp
        External/include/SFML/Graphics/Font.hpp
        External/include/SFML/Graphics/Glsl.hpp
        External/include/SFML/Graphics/Glsl.inl
        External/include/SFML/Graphics/Glyph.hpp
        External/include/SFML/Graphics/Image.hpp
        External/include/SFML/Graphics/PrimitiveType.hpp
        External/include/SFML/Graphics/Rect.hpp
        External/include/SFML/Graphics/Rect.inl
        External/include/SFML/Graphics/RectangleShape.hpp
        External/include/SFML/Graphics/RenderStates.hpp
        External/include/SFML/Graphics/RenderTarget.hpp
        External/include/SFML/Graphics/RenderTexture.hpp
        External/include/SFML/Graphics/RenderWindow.hpp
        External/include/SFML/Graphics/Shader.hpp
        External/include/SFML/Graphics/Shape.hpp
        External/include/SFML/Graphics/Sprite.hpp
        External/include/SFML/Graphics/Text.hpp
        External/include/SFML/Graphics/Texture.hpp
        External/include/SFML/Graphics/Transform.hpp
        External/include/SFML/Graphics/Transformable.hpp
        External/include/SFML/Graphics/Vertex.hpp
        External/include/SFML/Graphics/VertexArray.hpp
        External/include/SFML/Graphics/VertexBuffer.hpp
        External/include/SFML/Graphics/View.hpp
        External/include/SFML/Network/Export.hpp
        External/include/SFML/Network/Ftp.hpp
        External/include/SFML/Network/Http.hpp
        External/include/SFML/Network/IpAddress.hpp
        External/include/SFML/Network/Packet.hpp
        External/include/SFML/Network/Socket.hpp
        External/include/SFML/Network/SocketHandle.hpp
        External/include/SFML/Network/SocketSelector.hpp
        External/include/SFML/Network/TcpListener.hpp
        External/include/SFML/Network/TcpSocket.hpp
        External/include/SFML/Network/UdpSocket.hpp
        External/include/SFML/System/Clock.hpp
        External/include/SFML/System/Err.hpp
        External/include/SFML/System/Export.hpp
        External/include/SFML/System/FileInputStream.hpp
        External/include/SFML/System/InputStream.hpp
        External/include/SFML/System/Lock.hpp
        External/include/SFML/System/MemoryInputStream.hpp
        External/include/SFML/System/Mutex.hpp
        External/include/SFML/System/NativeActivity.hpp
        External/include/SFML/System/NonCopyable.hpp
        External/include/SFML/System/Sleep.hpp
        External/include/SFML/System/String.hpp
        External/include/SFML/System/String.inl
        External/include/SFML/System/Thread.hpp
        External/include/SFML/System/Thread.inl
        External/include/SFML/System/ThreadLocal.hpp
        External/include/SFML/System/ThreadLocalPtr.hpp
        External/include/SFML/System/ThreadLocalPtr.inl
        External/include/SFML/System/Time.hpp
        External/include/SFML/System/Utf.hpp
        External/include/SFML/System/Utf.inl
        External/include/SFML/System/Vector2.hpp
        External/include/SFML/System/Vector2.inl
        External/include/SFML/System/Vector3.hpp
        External/include/SFML/System/Vector3.inl
        External/include/SFML/Window/Clipboard.hpp
        External/include/SFML/Window/Context.hpp
        External/include/SFML/Window/ContextSettings.hpp
        External/include/SFML/Window/Cursor.hpp
        External/include/SFML/Window/Event.hpp
        External/include/SFML/Window/Export.hpp
        External/include/SFML/Window/GlResource.hpp
        External/include/SFML/Window/Joystick.hpp
        External/include/SFML/Window/Keyboard.hpp
        External/include/SFML/Window/Mouse.hpp
        External/include/SFML/Window/Sensor.hpp
        External/include/SFML/Window/Touch.hpp
        External/include/SFML/Window/VideoMode.hpp
        External/include/SFML/Window/Window.hpp
        External/include/SFML/Window/WindowHandle.hpp
        External/include/SFML/Window/WindowStyle.hpp
        External/include/SFML/Audio.hpp
        External/include/SFML/Config.hpp
        External/include/SFML/GpuPreference.hpp
        External/include/SFML/Graphics.hpp
        External/include/SFML/Main.hpp
        External/include/SFML/Network.hpp
        External/include/SFML/OpenGL.hpp
        External/include/SFML/System.hpp
        External/include/SFML/Window.hpp)
